--- a/src/app/neon-list/neon-list.component.html
+++ b/src/app/neon-list/neon-list.component.html
@@ -126,6 +126,8 @@
               <tr >
                 <td  style="font-family: Mukta-Bold;" data-column="Vos dessins techniques">Texte</td>
                 <td style="font-family: Mukta-Regular;" data-column="Etat">{{neonSelected.text}}</td>
+
+                <!-- <td  [className]="neonSelected.typo + ' dynamicNeonTitle ' + colorsList[neonSelected.colors] " style="font-family: Mukta-Regular;" data-column="Etat">{{neonSelected.text}}</td> -->
               </tr>
               <tr >
                 <td style="font-family: Mukta-Bold;" data-column="Vos dessins techniques">Typographie</td>
