--- a/src/app/neon-list/neon-list.component.scss
+++ b/src/app/neon-list/neon-list.component.scss
@@ -342,6 +342,40 @@ box-shadow: 5pxs 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.
     background-color: white;
 }
 
+.blancFroid {
+  color: #ffffff !important;
+}
+.blancChaud {
+  color: #ddcaaf !important;
+}
+.orange {
+  color: #ffa42c !important;
+}
+.jaune {
+  color: #ffe600 !important;
+}
+.rouge {
+  color: #ff0000 !important;
+}
+.rose {
+  color: #ff73ff !important;
+}
+.fuschia {
+  color: #df29ff !important;
+}
+.violet {
+  color: #9527ff !important;
+}
+
+.bleu {
+  color: #337dff !important;
+}
+.vert {
+  color: #15e81f !important;
+}
+.turquoise {
+  color: #17fff9 !important;
+}
 .neon-canvas {
     // height: 85%;
     height: 100%;
