--- a/src/app/neon-form/neon-form.component.scss
+++ b/src/app/neon-form/neon-form.component.scss
@@ -107,7 +107,13 @@
   text-align: center;
   border: 2px solid var(--color-brand-1);
 }
-
+.basic-input-text {
+  border: none;
+    font-size: 3vw;
+    text-align: center;
+    outline: none;
+    width: 100%;
+}
 .thumbnails {
   list-style: none;
   display: flex;
@@ -125,6 +131,7 @@
   background-repeat: no-repeat;
   height: 100%
 }
+
 
     .blancFroid {
       color: #ffffff !important;
@@ -162,15 +169,15 @@
     }
 .thumbnails li {
   cursor: pointer;
-  padding: 5%;
+  /* padding: 6%; */
   padding-right: 10%;
   padding-left: 10%;
   border: 2px solid transparent;
-  width: 50px;
-  height: 50px;
+  width: 25%;
+  height: 90px;
   opacity: 0.2;
-  background-repeat:no-repeat;
-  background-position:center;
+  background-repeat: no-repeat;
+  background-position: center;
   background-size: contain;
 }
 .thumbnails li.is-hidden {
