--- a/src/app/neon-form/neon-form.component.scss
+++ b/src/app/neon-form/neon-form.component.scss
@@ -185,6 +185,15 @@
   // padding: 5%;
 
 }
+#supportImg {
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  width: 40%;
+    // align-self: flex-end;
+cursor: pointer;
+outline: none !important;
+}
 
 
 
@@ -422,6 +431,7 @@ small {
 	box-sizing: border-box;
 }
 
+
 .steps-indicator {
   // position: absolute !important;
   // top: 60% !important;
@@ -470,7 +480,8 @@ justify-content: flex-start;
     justify-content: flex-start   ;
     border-radius: 7px;
     padding-left: 50px;
-    height: 315px;
+    min-height: 300px;
+    height: auto;
     padding-right: 50px; 
     box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
 }
@@ -620,7 +631,7 @@ margin: 10px;
 }
 
 .yellow-selected {
-    border: 1.5px solid #F4CC20;
+    border: 2px solid #F4CC20;
 }
 .mt3 {
   margin-top: 2.5%;
