--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,7 +2,7 @@
     <div class="col-4"></div>
 
     <div class="step-container-inner col-4">
-            <h1 class='login-header'>{{isSignIn ? 'Connectez-vous à votre espace' : 'Créez votre compte      Psssst tu veux du shit ?'}}</h1>
+            <h1 class='login-header'>{{isSignIn ? 'Connectez-vous à votre espace' : 'Créez votre compte      Psssst.......... c est gratuit !!'}}</h1>
             <div *ngIf="isSignIn" class="login-step-container">
 
                     <h2 class="login-title">Connectez vous à votre compte</h2>
