--- a/src/app/neon-form/neon-form.component.scss
+++ b/src/app/neon-form/neon-form.component.scss
@@ -13,35 +13,35 @@
   }
 
 
-  .Australia {
-    font-family: Australia, sans-serif !important;
+  .Jerry {
+    font-family: Jerry, sans-serif !important;
     font-size: 4vw !important;
   }
-  .Hero {
-    font-family: Hero, sans-serif !important;
+  .Jackie {
+    font-family: Jackie, sans-serif !important;
     font-size: 3vw !important;
   }
-  .Nickainley {
-    font-family: Nickainley, sans-serif !important;
-    font-size: 3vw !important;
-
-  }
-  .Quinzey_Bold {
-    font-family: Quinzey_Bold, sans-serif !important;
+  .Cobby {
+    font-family: Cobby, sans-serif !important;
     font-size: 3vw !important;
 
   }
-  .Rigoletto {
-    font-family: Rigoletto, sans-serif !important;    font-size: 3vw !important;
-
-  }
-  .TheAbsolute {
-    font-family: TheAbsolute, sans-serif !important;
+  .Johnny {
+    font-family: Johnny, sans-serif !important;
     font-size: 3vw !important;
 
   }
-  .TheSecret {
-    font-family: TheSecret, sans-serif !important;
+  .Perrie {
+    font-family: Perrie, sans-serif !important;    font-size: 3vw !important;
+
+  }
+  .Billie {
+    font-family: Billie, sans-serif !important;
+    font-size: 3vw !important;
+
+  }
+  .Jimmy {
+    font-family: Jimmy, sans-serif !important;
     font-size: 3vw !important;
 
   }
