--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,27 +12,27 @@
 }
 
 @font-face {
-  font-family: Australia;
+  font-family: Jerry;
   src:  url('./assets/fonts/Australia-Signature.ttf')  format('truetype');
 }
 @font-face {
-  font-family: Hero;
+  font-family: Jackie;
   src:  url('./assets/fonts/Hero-Regular.ttf')  format('truetype');
 }
 @font-face {
-  font-family: Nickainley;
+  font-family: Cobby;
   src:  url('./assets/fonts/Nickainley-Normal.ttf')  format('truetype');
 }
 @font-face {
-  font-family: Quinzey_Bold;
+  font-family: Johnny;
   src:  url('./assets/fonts/Quinzey_Bold.otf')  format('truetype');
 }
 @font-face {
-  font-family: Rigoletto;
+  font-family: Perrie;
   src:  url('./assets/fonts/rigoletto-9b6a.ttf')  format('truetype');
 }
 @font-face {
-  font-family: TheAbsolute;
+  font-family: Billie;
   src:  url('./assets/fonts/TheAbsolute.otf')  format('truetype');
 }
 @font-face {
