--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -12,16 +12,29 @@
             <th >Dessin technique</th>
             <th >Recu le</th>
             <th >Etat</th>
-            <th >Prix</th>  
+            <th >Prix</th>
+            <th >Typo</th>  
+
+            <th >Couleur</th>  
+
             <th >Filtrer
                 <div class="select">
                     <select (change)="filterCommand($event.target.value)"  name="slct" id="slct">
-                      <option selected disabled>Choisit un filtre</option>
                       <option value="all">Tout voir</option>
+                      <option selected disabled>Choisit un filtre</option>
                       <option value="Created">Created</option>
                       <option value="DT disponible">DT disponible</option>
                       <option value="Commandé">Commandé</option>
                       <option value="Payé">Payé</option>
+                      <option disabled>------------------------</option>
+                      <option value="Billie">Billie</option>
+                      <option value="Cobby">Cobby</option>
+                      <option value="Jackie">Jackie</option>
+                      <option value="Jerry">Jerry</option>
+                      <option value="Jimmy">Jimmy</option>
+                      <option value="Johnny">Johnny</option>
+                      <option value="Perrie">Perrie</option>
+
                     </select>
                   </div>
             </th>
@@ -30,28 +43,21 @@
         </thead>
         <tbody>   
           <tr  *ngFor="let command of neonList; let i = index" >
-            <td (click)="goToDetail(command)" data-column="Yencli"><div class="table-position-circle">{{i+1}}</div>{{command.email}}</td>
+            <td (click)="goToDetail(command)" data-column="Yencli">{{command.email}}</td>
             <td (click)="goToDetail(command)" data-column="Type">{{command.type}}</td>
             <td (click)="goToDetail(command)" data-column="Dessin technique">{{command.text}}</td>
             <td (click)="goToDetail(command)" data-column="Recu le">{{command.creationDate}}</td>
 
             <td (click)="goToDetail(command)" data-column="Etat">{{command.state}}</td>
             <td (click)="goToDetail(command)" data-column="Prix">{{command.price}}</td>
+            <td (click)="goToDetail(command)" data-column="Typo">{{command.typo}}</td>
+            <td (click)="goToDetail(command)" data-column="Couleur">{{command.colors}}</td>
 
             <div class="row" >
-              <div  class="col-10">
-                  <button  *ngIf="command.state === 'created'  && command.type === 'consumer'" (click)="fromCreatedToDT(command);"  style="padding-right: 30px; padding-left: 30px; margin-top: 5px;" class="next-btn">Envoyer DT et prix</button>
-                  <div  *ngIf="command.state === 'created' && command.type === 'consumer'" class="money">
-                      <input (change)="changePrice($event.target.value)" type="text" class="numberOnly" autocomplete="off" maxlength="8" /><div>$</div>                      
-                  </div>                  
-                  
-                  <input *ngIf="command.state === 'created' && command.type === 'consumer'" (change)="importDT($event, command)" type="file"   class="basic-input-admin"/>
-                  <!-- <span *ngIf="currentFile && command.state === 'created'" style="text-align: center;">{{currentFile?.fileName}}</span> -->
-
-              </div>
+      
 
               <div class="col-2">
-                  <button (click)="deleteCommand(command)"  style="padding-right: 30px; padding-left: 30px; margin-top: 5px; float: right" class="next-btn">Supprimer</button>
+                  <button (click)="deleteCommand(command)"  style="padding-right: 30px; padding-left: 30px;" class="next-btn">Supprimer</button>
 
   
               </div>
@@ -111,13 +117,32 @@
                   <td  style="font-family: Mukta-Bold;" data-column="Vos dessins techniques">Etat</td>
                   <td  style="font-family: Mukta-Regular;" data-column="Etat">{{neonSelected.state}}</td>
                 </tr>
+                <tr >
+                    <td  style="font-family: Mukta-Bold;" data-column="Vos dessins techniques">Typo</td>
+                    <td  style="font-family: Mukta-Regular;" data-column="Etat">{{neonSelected.typo}}</td>
+                  </tr>
+                  <tr >
+                      <td  style="font-family: Mukta-Bold;" data-column="Vos dessins techniques">Couleur</td>
+                      <td  style="font-family: Mukta-Regular;" data-column="Etat">{{neonSelected.colors}}</td>
+                    </tr>
           <tr >
                 <td  style="font-family: Mukta-Bold;" data-column="Vos dessins techniques">Prix</td>
                 <td style="font-family: Mukta-Regular;" data-column="Etat">{{neonSelected.price}} Euros</td>
               </tr>
             </tbody>
           </table>
-
+            <div class="row">
+                <div *ngIf="neonSelected.state === 'created'"   class="col-12">
+                    <button  (click)="fromCreatedToDT(neonSelected);"  style="padding-right: 30px; padding-left: 30px; margin-top: 5px;" class="next-btn">Envoyer DT et prix</button>
+                    <div  class="money">
+                        <input (change)="changePrice($event.target.value)" type="text" class="numberOnly" autocomplete="off" maxlength="8" /><div>$</div>                      
+                    </div>                  
+                    
+                    <input (change)="importDT($event, command)" type="file"   class="basic-input-admin"/>
+                    <!-- <span *ngIf="currentFile && command.state === 'created'" style="text-align: center;">{{currentFile?.fileName}}</span> -->
+  
+                </div>
+            </div>
 
     </div>
 
