--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -103,3 +103,32 @@ height: 100vh;
     background-blend-mode: multiply;
   }
   
+/* The snackbar - position it at the bottom and in the middle of the screen */
+#dpl-snackbar {
+    visibility: hidden; /* Hidden by default. Visible on click */
+    min-width: 300px; /* Set a default minimum width */
+    margin-left: -125px; /* Divide value of min-width by 2 */
+    border-radius: 5px;
+    box-shadow: 0 6px 16px 0 rgba(8, 1, 120, 0.3);
+    background-color: #000B31;  text-align: center; /* Centered text */
+    padding: 10px; /* Padding */
+    position: fixed; /* Sit on top of the screen */
+    z-index: 9999999; /* Add a z-index if needed */
+    left: 50%; /* Center the snackbar */
+    color: #F4CC20;
+    bottom: 30px; /* 30px from the bottom */
+    font-family: Nunito-Black, sans-serif;
+    font-size: 17px;
+  
+  }
+  
+  /* Show the snackbar when clicking on a button (class added with JavaScript) */
+  .show {
+    visibility: visible !important; /* Show the snackbar */
+  
+    /* Add animation: Take 0.5 seconds to fade in and out the snackbar.
+    However, delay the fade out process for 2.5 seconds */
+    //-webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
+    //animation: fadein 0.5s, fadeout 0.5s 2.5s;
+  }
+  
