--- a/src/app/neon-list/neon-list.component.html
+++ b/src/app/neon-list/neon-list.component.html
@@ -19,7 +19,7 @@
           </thead>
           <tbody>
             <tr *ngFor="let command of neonList; let i = index" (click)="goToNeonDetail(command)"  >
-              <td data-column="Vos dessins techniques"><div class="table-position-circle">{{i+1}}</div>{{command.text}}</td>
+              <td data-column="Vos dessins techniques">{{command.text}}</td>
               <td data-column="Etat">{{command.state}}</td>
             </tr>
 
@@ -94,7 +94,9 @@
 
   <div class="ec-top-row-detail row">
     <div class="col-8 neon-canvas-cont">
-      <div [style.backgroundImage]="'url('+ neonSelected.filePath +')'" class="neon-canvas"></div>
+      <div *ngIf="neonSelected.state !== 'created'" [style.backgroundImage]="'url('+ neonSelected.filePath +')'" class="neon-canvas"></div>
+      <div *ngIf="neonSelected.state === 'created'"   class="neon-canvas"><div class='no-dt'>Dessin technique en cours de design</div></div>
+
       <div class="neon-bar">
         <div class="neon-bar-item">Incassable</div>
         <div class="neon-bar-item">Réistant à l'eau</div>
@@ -155,8 +157,7 @@
               <span class="neon-tarif-blabla">Livraison incluse </span>
 
             </div>
-            <button *ngIf="neonSelected.state === 'commandé'"  (click)="openCommand();" style="margin-right: 5%;" class="next-btn">Payer</button>
-            <button  *ngIf="neonSelected.state !== 'commandé' && neonSelected.state !== 'payé'"  (click)="openCommand();" style="margin-right: 5%;" class="next-btn">Commander</button>
+            <button  *ngIf="neonSelected.state !== 'created' && neonSelected.state !== 'payé'"  (click)="openCommand();" style="margin-right: 5%;" class="next-btn">Commander</button>
 
           </div>
     </div>
@@ -306,6 +307,7 @@
             </div>
             <span *ngIf="commandFailed" class='errorMessage'>{{errorMessage}}</span>
             <button  (click)="command();" style="margin-right: 5%;;" class="next-btn">Passer ma commande</button>
+            <!-- <button *ngIf="neonSelected.state === 'commandé'"  (click)="openCommand();" style="margin-right: 5%;" class="next-btn">Payer</button> -->
 
       </div>
 
@@ -374,3 +376,5 @@
           <circle stroke="#f4cc20" class="path" cx="25" cy="25" r="20" fill="none" stroke-width="8.3"></circle>
         </svg>
 </div>
+
+<div id="dpl-snackbar" [class]="snackbarClass">{{snackMsg}}</div>
